# stroke-deepisles-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_JS_LOADING_ISSUES.md  BUGS-AUDIT-2024-12-12.md  BUGS-HF-SPACES-INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  DATA-PIPELINE.md  DIAGNOSTIC_HF_LOADING.md  Dockerfile  HF_SPACES_UI_BROKEN_AUDIT.md  Makefile  NEXT-CONCERNS.md  POST-AUDIT-FINDINGS-2025-12-13.md  README.md  ROOT_CAUSE_ANALYSIS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: TECHNICAL_DEBT.md
docs/bugs/: 001-cors-static-files-hf-spaces.md  002-http-vs-https-proxy-headers.md  003-gateway-timeout-long-inference.md  004-staticfiles-cors-middleware-not-applied.md  ARCHITECTURE-AUDIT-2024-12-13.md  AUDIT-FINDINGS-2025-12-13.md  BUG-014-api-cases-500-error.md  BUGS-AUDIT-2024-12-12.md  BUGS-AUDIT-DEEP-DIVE.md  BUGS-HF-SPACES-INTEGRATION.md  HF_SPACES_UI_BROKEN_AUDIT.md  NEXT-CONCERNS.md  POST-REFACTOR-AUDIT-2024-12-13.md  README.md  REMAINING-ISSUES-2024-12-13.md
docs/dataset-card/: isles24-stroke.md
docs/guides/: configuration.md  deployment.md  quickstart.md
docs/specs/: 00-context.md  00-data-loading-refactor.md  01-phase-0-repo-bootstrap.md  02-phase-1-data-access.md  03-phase-2-deepisles-docker.md  04-phase-3-pipeline.md  05-phase-4-gradio-ui.md  06-phase-5-polish.md  07-hf-spaces-deployment.md  08-bug-hf-spaces-dataset-loop.md  09-bug-deepisles-not-installed-hf-spaces.md  10-bug-niivue-viewer-black-screen.md  11-bug-niivue-js-on-load-not-rerunning.md  19-perf-base64-to-file-urls.md  24-bug-gradio-webgl-analysis.md  24-bug-hf-spaces-loading-forever.md  28-gradio-custom-component-niivue.md  29-codebase-status-audit.md  30-bug-hf-spaces-build-packages-dir.md  32-bug-hf-spaces-ui-frozen-audit.md  AUDIT_JS_LOADING_ISSUES.md  AUDIT_REPORT_2025_12_10.md  GRADIO_WEBGL_ANALYSIS.md  NIIVUE-GRADIO-POSTMORTEM.md  async-job-queue.md  data-discovery.md
docs/specs/archive/: 00-context.md  05-phase-4-gradio-ui.md  06-phase-5-polish.md  07-hf-spaces-deployment.md  08-bug-hf-spaces-dataset-loop.md  09-bug-deepisles-not-installed-hf-spaces.md  19-perf-base64-to-file-urls.md  23-slice-comparison-overlay-bug.md  24-bug-hf-spaces-loading-forever.md  33-definitive-niivue-gradio-integration.md  34-COMPREHENSIVE-NIIVUE-GRADIO-AUDIT.md  35-FINAL-ATTEMPT-GRADIO-IFRAME.md
docs/specs/archive/frontend/: 36-frontend-without-gradio-hf-spaces.md  37-1-foundation-components.md  37-4-app-integration.md
docs/specs/frontend/: 36-frontend-without-gradio-hf-spaces.md  37-0-project-setup.md  37-2-api-layer.md  37-3-interactive-components.md  37-4-app-integration.md  37-5-e2e-and-ci.md
frontend/: .env.production  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.test.json  vitest.config.ts
frontend/e2e/: error-handling.spec.ts  fixtures.ts  home.spec.ts  segmentation-flow.spec.ts
frontend/e2e/pages/: HomePage.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: CaseSelector.tsx  ErrorBoundary.tsx  Layout.tsx  MetricsPanel.tsx  NiiVueViewer.tsx  ProgressIndicator.tsx  index.ts
frontend/src/components/__tests__/: CaseSelector.test.tsx  ErrorBoundary.test.tsx  Layout.test.tsx  MetricsPanel.test.tsx  NiiVueViewer.test.tsx
frontend/src/hooks/: index.ts  useSegmentation.ts
frontend/src/hooks/__tests__/: useSegmentation.test.tsx
frontend/src/mocks/: handlers.ts
frontend/src/test/: fixtures.ts  setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: retry.ts
scripts/: deepisles_adapter.py  test_js_on_load.py
scripts/discovery/: inspect_isles24.py
src/stroke_deepisles_demo/: __init__.py  cli.py  metrics.py  pipeline.py
src/stroke_deepisles_demo/api/: __init__.py  config.py  files.py  job_store.py  main.py  routes.py  schemas.py
src/stroke_deepisles_demo/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/stroke_deepisles_demo/data/: __init__.py  adapter.py  constants.py  isles24_manifest.py  loader.py  staging.py
src/stroke_deepisles_demo/inference/: __init__.py  deepisles.py  direct.py  docker.py
src/stroke_deepisles_demo/ui/: __init__.py  app.py  components.py  viewer.py
src/stroke_deepisles_demo/ui/assets/: niivue-loader.html  niivue.js
tests/: __init__.py  conftest.py  test_cli.py  test_metrics.py  test_metrics_memory.py  test_package.py  test_pipeline.py  test_pipeline_cleanup.py
tests/api/: test_endpoints.py  test_job_store.py
tests/core/: test_config.py  test_logging.py
tests/data/: test_adapter.py  test_adapter_edge_cases.py  test_hf_adapter.py  test_integration_real_data.py  test_isles24_dataset.py  test_loader.py  test_staging.py  test_staging_security.py
tests/inference/: test_deepisles.py  test_direct.py  test_docker.py
tests/ui/: test_app.py  test_viewer.py
